--- a/src/css/wazimap-ng.webflow.css
+++ b/src/css/wazimap-ng.webflow.css
@@ -4077,6 +4077,10 @@ label {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
@@ -4093,8 +4097,6 @@ label {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  width: 50%;
-  margin-bottom: 4px;
   color: #999;
   font-size: 0.7em;
   line-height: 1em;
@@ -10310,7 +10312,7 @@ label {
 
   .map-location {
     overflow: scroll;
-    max-width: 100vw;
+    max-width: 95vw;
   }
 
   .map-location__tags {
@@ -10484,6 +10486,11 @@ label {
     flex: 0 auto;
   }
 
+  .map-geo-select {
+    bottom: 85px;
+    z-index: 500;
+  }
+
   .mag-geo__dropdown_wrap {
     -webkit-box-flex: 1;
     -webkit-flex: 1;
@@ -10494,6 +10501,12 @@ label {
   .rich-data__print {
     top: 70px;
     display: none;
+  }
+
+  .map-bottom-items {
+    width: 100%;
+    padding-right: 53px;
+    padding-left: 10px;
   }
 
   .div-block {
@@ -10530,6 +10543,12 @@ label {
     -webkit-flex: 1;
     -ms-flex: 1;
     flex: 1;
+  }
+
+  .map-bottom-items--v2 {
+    width: 100%;
+    padding-right: 52px;
+    padding-left: 10px;
   }
 
   .tutorial-2 {
@@ -10758,6 +10777,10 @@ label {
     width: 90%;
     padding: 4px 16px;
     grid-row-gap: 4px;
+  }
+
+  .map-bottom-items {
+    padding-right: 40px;
   }
 
   .profile-indicator__filter_menu {
