--- a/src/css/wazimap-ng.webflow.css
+++ b/src/css/wazimap-ng.webflow.css
@@ -314,6 +314,7 @@ label {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  max-width: 95vw;
   padding: 8px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -425,9 +426,9 @@ label {
   -ms-flex-align: center;
   align-items: center;
   -webkit-box-flex: 0;
-  -webkit-flex: 0 auto;
-  -ms-flex: 0 auto;
-  flex: 0 auto;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
   border: 1px solid transparent;
   border-radius: 3px;
   background-color: #707070;
@@ -522,6 +523,7 @@ label {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  overflow: auto;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -webkit-flex-direction: row;
@@ -10311,15 +10313,7 @@ label {
   }
 
   .map-location {
-    overflow: scroll;
     max-width: 95vw;
-  }
-
-  .map-location__tags {
-    -webkit-box-pack: end;
-    -webkit-justify-content: flex-end;
-    -ms-flex-pack: end;
-    justify-content: flex-end;
   }
 
   .rich-data-toggles {
@@ -10430,7 +10424,7 @@ label {
   }
 
   .panel-toggles {
-    top: 140px;
+    top: 190px;
   }
 
   .data-mapper-toggles {
