adding tutorial react component

--- a/src/custom-css/general.scss
+++ b/src/custom-css/general.scss
@@ -23,6 +23,12 @@
   top: 80px;
 }
 
+.tutorial-button-container {
+  position: fixed;
+  right: 0;
+  bottom: 300px;
+}
+
 @media (max-width: 480px) {
   .right-panel-toggles {
     top: 370px;
