--- a/src/custom-css/general.scss
+++ b/src/custom-css/general.scss
@@ -24,9 +24,8 @@
 }
 
 .tutorial-button-container {
-  position: fixed;
-  right: 0;
-  bottom: 300px;
+  position: relative;
+  height:100%;
 }
 
 @media (max-width: 480px) {
