--- a/src/custom-css/general.scss
+++ b/src/custom-css/general.scss
@@ -103,7 +103,6 @@
     }
 
     .search-result-point-column {
-      width: 25%;
       padding-left: 12px;
       padding-right: 12px;
       font-size: 14px;
@@ -112,6 +111,16 @@
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
+
+      button.point-result-pin {
+        background-color: transparent;
+        height: 100%;
+        border-left: 5px solid #fff;
+        text-align: center;
+        width: 100%;
+        padding: 0;
+        margin: 0 auto;
+      }
     }
   }
 }
