--- a/src/custom-css/general.scss
+++ b/src/custom-css/general.scss
@@ -122,6 +122,10 @@
         padding: 0;
         margin: 0 auto;
       }
+
+      .MuiSelect-select i.material-icons {
+        font-size: 18px;
+      }
     }
   }
 }
