--- a/src/custom-css/general.scss
+++ b/src/custom-css/general.scss
@@ -17,6 +17,13 @@
   bottom: 10px;
 }
 
+.cc-license-wrapper {
+  position: absolute;
+  left: 10px;
+  bottom: -5px;
+  font-size: 10px;
+}
+
 .right-panel-toggles {
   position: fixed;
   right: 0;
